updated color scale, and images

--- a/risi_app/index.html
+++ b/risi_app/index.html
@@ -45,10 +45,10 @@
 			<div class="content">
 				<div class="inner">
 					<header>
-						<h2><a href="carto.html">Visualze through carto maps</a></h2>
+						<h2><a href="carto.html">Visualize Carto maps</a></h2>
 						
 					</header>
-					<p>Visualze DoD and COVID data through carto maps.</p>
+					<p>Visualize DoD and COVID data through Carto maps.</p>
 					<ul class="actions">
 						<li><a href="carto.html" class="button alt">Go</a></li>
 					</ul>
@@ -63,15 +63,15 @@
 		<!-- Two -->
 		<article id="two" class="post invert style1 alt">
 			<div class="image">
-				<img src="static/images/doctor.jpg" alt="" data-position="10% center" />
+				<img src="static/images/cov4.jpg" alt="" data-position="10% center" />
 			</div>
 			<div class="content">
 				<div class="inner">
 					<header>
-						<h2><a href="vis.html">Explore through other visualizations</a></h2>
+						<h2><a href="vis.html">Explore More</a></h2>
 						
 					</header>
-					<p>Gain more insight by exploring the data through these other visualizations.</p>
+					<p>Gain more insights by exploring the data through other visualizations.</p>
 					<ul class="actions">
 						<li><a href="vis.html" class="button alt">Go</a></li>
 					</ul>
