--- a/risi_app/vis.html
+++ b/risi_app/vis.html
@@ -105,7 +105,7 @@
 
 				<header class="major special">
 					<h3>Death Rates for DoD and Covid</h3>
-					<p> Interact with the Scatterplot with see details about counties. The death of despair data is for only deaths due to drugs during 2014-2018.
+					<p> Interact with the Scatterplot to see details about counties. The death of despair data is for only deaths due to drugs during 2014-2018.
 						There are a few outliers, but most DoD rates are within 60, whereas most covid deaths rates are within 400 (per 100K). There is no significant correlation. </p>
 				</header>
 
